# CrownDensity

./: CMakeLists.txt  CrownDensity.pro  CrownDensityMain.pro  Doxyfile  Firmament.txt  MetaFile.txt  MetaFile1.txt  README.md  Tree.txt  Tree1.txt  TreePlotFunction.R  adhoc.fun  crowndensity_globals.cc  fgo.fun  fgo1.fun  fip.fun  fip1.fun  globalvariables.cc  main.cc  needle.tga  pine-em98-branch-A.L  pine-em98-branch-B.L  pine-em98-branch-C.L  pine-em98.L  run-crowndens-architecture.sh  run-crowndens-basic-model.sh  run-crowndens.sh  stemsha.fun  toptax.fun
ResultAnalysis/: CompareTwoRuns.R  ExtractXML.R  ForestPlotFunction.R  TreePlotFunction.R
include/: ByBranches.h  CrownDensityGlobals.h  CrownDensityScotsPine.h  ModeChangeFunctions.h  RadiationCrownDens.h  ScotsPine.h
src/: ScotsPine.cc  branchfunctor.cc  bybranches.cc  crowndensity_globals.cc  globalvariables.cc  modechangefunctions.cc  radiation.cc
